--- a/Resources/DesktopModules/Admin/Security/App_LocalResources/Password.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Security/App_LocalResources/Password.ascx.nl-NL.resx
@@ -13,7 +13,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AdminChangeHelp.Text" xml:space="preserve">
-    <value>Om het wachtwoord voor deze gebruiker te veranderen voer je een nieuw wachtwoord in. Bebevestig dit door het nogmaals in te typen.</value>
+    <value>Om het wachtwoord voor deze gebruiker te veranderen voer je een nieuw wachtwoord in. Bevestig dit door het nogmaals in te typen.</value>
   </data>
   <data name="AdminResetHelp.Text" xml:space="preserve">
     <value>Je kunt het wachtwoord voor deze gebruiker resetten. Het wachtwoord zal automatisch naar de gebruiker worden gemaild. Deze e-mail  is 24 uur geldig.</value>
@@ -52,7 +52,7 @@
     <value>Geef het antwoord op de wachtwoordvraag in.</value>
   </data>
   <data name="plEditAnswer.Text" xml:space="preserve">
-    <value>Wachtwoord Antwoord:</value>
+    <value>Wachtwoord antwoord:</value>
   </data>
   <data name="plEditQuestion.Help" xml:space="preserve">
     <value>Geef de wachtwoordvraag op die je wilt gebruiken. Het zou iets moeten zijn waar alleen jij het antwoord op weet.</value>
@@ -64,31 +64,31 @@
     <value>Datum waarop het wachtwoord verloopt</value>
   </data>
   <data name="plExpires.Text" xml:space="preserve">
-    <value>Wachtwoord Verloopt:</value>
+    <value>Wachtwoord verloopt:</value>
   </data>
   <data name="plLastChanged.Help" xml:space="preserve">
-    <value>Datum laatste wijziging Wachtwoord</value>
+    <value>Datum laatste wijziging wachtwoord</value>
   </data>
   <data name="plLastChanged.Text" xml:space="preserve">
-    <value>Datum Laatste Wijziging Wachtwoord:</value>
+    <value>Datum laatste wijziging wachtwoord:</value>
   </data>
   <data name="plNewConfirm.Help" xml:space="preserve">
     <value>Bevestig het nieuwe wachtwoord</value>
   </data>
   <data name="plNewConfirm.Text" xml:space="preserve">
-    <value>Bevestig Wachtwoord:</value>
+    <value>Bevestig wachtwoord:</value>
   </data>
   <data name="plNewPassword.Help" xml:space="preserve">
     <value>Invoeren nieuw wachtwoord</value>
   </data>
   <data name="plNewPassword.Text" xml:space="preserve">
-    <value>Nieuwe Wachtwoord:</value>
+    <value>Nieuwe wachtwoord:</value>
   </data>
   <data name="plOldPassword.Help" xml:space="preserve">
-    <value>Invoeren huidige Wachtwoord</value>
+    <value>Invoeren huidige wachtwoord</value>
   </data>
   <data name="plOldPassword.Text" xml:space="preserve">
-    <value>Huidig Wachtwoord:</value>
+    <value>Huidig wachtwoord:</value>
   </data>
   <data name="plQAPassword.Help" xml:space="preserve">
     <value>Voer je huidig wachtwoord in.</value>
@@ -103,7 +103,7 @@
     <value>Wachtwoord controlevraag:</value>
   </data>
   <data name="plResetToken.Help" xml:space="preserve">
-    <value>Voer de herstel token in van de eE-mail</value>
+    <value>Voer de herstel token in van de E-mail</value>
   </data>
   <data name="plResetToken.Text" xml:space="preserve">
     <value>Voer de hersteltoken in</value>
