--- a/Resources/DesktopModules/Admin/Security/App_LocalResources/ProfileDefinitions.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Security/App_LocalResources/ProfileDefinitions.ascx.nl-NL.resx
@@ -34,7 +34,7 @@
     <value>Standaardwaarde</value>
   </data>
   <data name="DefaultVisibility.Header" xml:space="preserve">
-    <value>Standaard Zichtbaarheid</value>
+    <value>Standaard zichtbaarheid</value>
   </data>
   <data name="Delete.Text" xml:space="preserve">
     <value>Verwijderen</value>
