--- a/Resources/ReleaseNotes.txt
+++ b/Resources/ReleaseNotes.txt
@@ -15,12 +15,18 @@ Belangrijkste verbeteringen in deze release van het nl-NL taalpakket:
 Aanvullen van de vertaling van Prompt
 </li>
 <li style="margin-left:20px;">
+Ontbrekende installatie regels voor enkele nieuwe nl-NL.esx bestanden aan .dnn manifest toegevoegd
+</li>
+<li style="margin-left:20px;">
 Correctie van tikfouten
 </li>
 <li style="margin-left:20px;">
 Aanvullen enkele nog niet vertaalde teksten
 </li>
 </ul>
+<p>&nbsp;</p>
+<hr />
+<p>&nbsp;</p>
 </div>
 <div>
 <h3>Language Pack versie nl-NL 09.10.00</h3>
@@ -44,6 +50,9 @@ Correctie van tikfouten
 Verwijderen van niet meer gebruikte tekstelementen
 </li>
 </ul>
+<p>&nbsp;</p>
+<hr />
+<p>&nbsp;</p>
 </div>
 <div>
 <h3>Language Pack versie nl-NL 09.07.02</h3>
